--- a/Te_amo.html
+++ b/Te_amo.html
@@ -9,34 +9,83 @@
 body{
   margin:0;
   height:100vh;
+  overflow:hidden;
+  font-family:'Georgia', serif;
+  background: radial-gradient(circle at center, #2b0040 0%, #120018 60%, #000000 100%);
   display:flex;
   justify-content:center;
   align-items:center;
-  background: radial-gradient(circle at center, #2b0040 0%, #120018 60%, #000000 100%);
-  font-family: 'Georgia', serif;
-  overflow:hidden;
+  color:white;
 }
 
-/* Latido del fondo */
-@keyframes latido {
-  0% { background-size:100% 100%; }
-  50% { background-size:105% 105%; }
-  100% { background-size:100% 100%; }
+/* Pantalla inicial */
+#inicio{
+  position:absolute;
+  width:100%;
+  height:100%;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  font-size:22px;
+  letter-spacing:2px;
+  cursor:pointer;
+  background: radial-gradient(circle at center, #1a0028, #000000);
+  z-index:10;
 }
 
-body{
-  animation: latido 4s ease-in-out infinite;
+/* Estrellas */
+.estrella{
+  position:absolute;
+  width:2px;
+  height:2px;
+  background:white;
+  border-radius:50%;
+  opacity:0.8;
+  animation: flotar linear infinite;
 }
 
-/* Caja del mensaje */
+@keyframes flotar{
+  0%{ transform: translateY(0px); }
+  100%{ transform: translateY(-100vh); }
+}
+
+/* Corazón tenue */
+.corazon{
+  position:absolute;
+  font-size:400px;
+  opacity:0.03;
+  animation: latido 3s ease-in-out infinite;
+  pointer-events:none;
+}
+
+@keyframes latido{
+  0%{ transform:scale(1); }
+  50%{ transform:scale(1.05); }
+  100%{ transform:scale(1); }
+}
+
+/* Contenedor texto */
 .contenedor{
   width:85%;
   max-width:700px;
-  color:white;
-  font-size:18px;
   line-height:1.7;
-  text-align:left;
+  font-size:18px;
+  position:relative;
+  z-index:2;
   white-space:pre-wrap;
+  opacity:0;
+  transition:opacity 1.5s ease;
+}
+
+/* Iluminación final */
+.brillo{
+  animation: iluminar 2s ease forwards;
+}
+
+@keyframes iluminar{
+  0%{ text-shadow:none; }
+  50%{ text-shadow:0 0 15px rgba(255,255,255,0.7); }
+  100%{ text-shadow:none; }
 }
 
 /* Cursor */
@@ -56,27 +105,53 @@ body{
 </head>
 <body>
 
+<div id="inicio">Toca para leer</div>
+
+<div class="corazon">❤</div>
+
 <div class="contenedor">
-  <span id="texto"></span><span class="cursor"></span>
+  <span id="texto"></span><span class="cursor" id="cursor"></span>
 </div>
 
 <script>
 const mensaje = `Bueno Abi, quizás para ti todo lo que digan son tonterías pero no puedo evitar decirlas, porque se que de verdad cometo errores, que me equivoqué en más de una ocasión, que siempre hago algo que termina haciéndote enojar, y no quiero eso, no porque me moleste como te pongas sino porque no puedo soportar la idea de saber que estás así por mi culpa, y de verdad quiero ser quien te haga feliz, quien sea la razón de que sonrias con cada tontería que digo que te rías de mis malos chistes o cada error tonto que cometo, pero solo quiero estar contigo, y harías lo que fuera por eso, cambiaría todo de mi si es necesario, pero no quiero perderte, eres lo único que me mantiene cuerdo, lo único que me sostiene donde estoy, de no abandonar todo y desaparecer, porque quiero construir un futuro para mi un futuro contigo, en el que al fin pueda ser feliz`;
 
 const textoElemento = document.getElementById("texto");
+const contenedor = document.querySelector(".contenedor");
+const inicio = document.getElementById("inicio");
+const cursor = document.getElementById("cursor");
+
 let i = 0;
 
+/* Crear estrellas */
+for(let j=0;j<80;j++){
+  let estrella = document.createElement("div");
+  estrella.className = "estrella";
+  estrella.style.left = Math.random()*100 + "vw";
+  estrella.style.top = Math.random()*100 + "vh";
+  estrella.style.animationDuration = (20 + Math.random()*20) + "s";
+  document.body.appendChild(estrella);
+}
+
+/* Escribir texto */
 function escribir(){
   if(i < mensaje.length){
     textoElemento.innerHTML += mensaje.charAt(i);
     i++;
-    setTimeout(escribir, 35);
+    setTimeout(escribir, 30);
+  } else {
+    cursor.style.display="none";
+    contenedor.classList.add("brillo");
   }
 }
 
-escribir();
+/* Iniciar al tocar */
+inicio.addEventListener("click",()=>{
+  inicio.style.display="none";
+  contenedor.style.opacity="1";
+  escribir();
+});
 </script>
 
 </body>
-  </html>
-  
+</html>
