--- a/Te_amo.html
+++ b/Te_amo.html
@@ -123,17 +123,6 @@ const cursor = document.getElementById("cursor");
 
 let i = 0;
 
-/* Crear estrellas */
-for(let j=0;j<80;j++){
-  let estrella = document.createElement("div");
-  estrella.className = "estrella";
-  estrella.style.left = Math.random()*100 + "vw";
-  estrella.style.top = Math.random()*100 + "vh";
-  estrella.style.animationDuration = (20 + Math.random()*20) + "s";
-  document.body.appendChild(estrella);
-}
-
-/* Escribir texto */
 function escribir(){
   if(i < mensaje.length){
     textoElemento.innerHTML += mensaje.charAt(i);
@@ -142,16 +131,63 @@ function escribir(){
   } else {
     cursor.style.display="none";
     contenedor.classList.add("brillo");
+
+    // Espera 2 segundos y ejecuta cierre
+    setTimeout(cierreFinal, 2000);
   }
 }
 
-/* Iniciar al tocar */
+function cierreFinal(){
+  document.body.innerHTML = "";
+  document.body.style.background = "black";
+
+  setTimeout(()=>{
+    const finalText = document.createElement("div");
+    finalText.style.color="white";
+    finalText.style.fontSize="28px";
+    finalText.style.textAlign="center";
+    finalText.style.marginTop="40vh";
+    finalText.style.fontFamily="Georgia, serif";
+    document.body.appendChild(finalText);
+
+    const frase = "te amo abi lo lamento mucho por todo";
+    let j = 0;
+
+    function escribirFinal(){
+      if(j < frase.length){
+        finalText.innerHTML += frase.charAt(j);
+        j++;
+        setTimeout(escribirFinal, 80);
+      } else {
+        setTimeout(mostrarSnoopy, 800);
+      }
+    }
+
+    escribirFinal();
+
+  },1000);
+}
+
+function mostrarSnoopy(){
+  const snoopy = document.createElement("div");
+  snoopy.style.textAlign="center";
+  snoopy.style.marginTop="40px";
+
+  snoopy.innerHTML = `
+  <div style="font-size:80px;">🐶</div>
+  <div style="font-size:60px; color:red; margin-top:-10px;">❤️</div>
+  `;
+
+  document.body.appendChild(snoopy);
+}
+
 inicio.addEventListener("click",()=>{
   inicio.style.display="none";
   contenedor.style.opacity="1";
   escribir();
 });
 </script>
+  
 
 </body>
 </html>
