--- a/Libro-abi.html
+++ b/Libro-abi.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Libro para Abi</title>
+<title>El campesino y su sueño</title>
 
 <style>
 body{
@@ -12,79 +12,85 @@ body{
   display:flex;
   justify-content:center;
   align-items:center;
-  background:#1a0f14;
+  background:#140a0f;
   font-family: "Georgia", serif;
-  perspective:2000px;
+  perspective:2500px;
 }
 
-/* Contenedor libro */
+/* CONTENEDOR LIBRO */
 .libro{
-  width:320px;
-  height:480px;
+  width:340px;
+  height:500px;
   position:relative;
   transform-style:preserve-3d;
 }
 
-/* Tapa */
+/* TAPA BORDO */
 .tapa{
   position:absolute;
   width:100%;
   height:100%;
-  background:linear-gradient(145deg,#6b0f1a,#8b1c2d);
-  border-radius:8px;
-  box-shadow:0 15px 40px rgba(0,0,0,0.6);
+  background:#6d0f1f;
+  border-radius:10px;
+  box-shadow:0 20px 50px rgba(0,0,0,0.6);
   display:flex;
   justify-content:center;
   align-items:center;
-  color:#f5e6d3;
-  font-size:22px;
+  color:#f4e7d3;
   text-align:center;
-  padding:20px;
+  padding:30px;
+  font-size:20px;
+  line-height:1.4;
   backface-visibility:hidden;
   transform-origin:left;
   transition:transform 1s ease;
 }
 
-/* Páginas */
+/* PÁGINAS */
 .pagina{
   position:absolute;
   width:100%;
   height:100%;
-  background:linear-gradient(to bottom,#f4ecd8,#e8dcc2);
-  border-radius:8px;
-  box-shadow:inset 0 0 20px rgba(0,0,0,0.2);
-  padding:30px;
+  background:linear-gradient(to bottom,#f5ecd9,#e8dcc3);
+  border-radius:10px;
+  box-shadow:inset 0 0 25px rgba(0,0,0,0.2);
+  padding:25px;
   box-sizing:border-box;
   backface-visibility:hidden;
   transform-origin:left;
   transition:transform 1s ease;
+  overflow-y:auto;
 }
 
-/* Texto estilo romántico */
-.pagina h2{
-  margin-top:0;
-  font-weight:normal;
-  color:#5a2a2a;
-}
-
+/* TEXTO */
 .pagina p{
-  color:#4a3a2a;
+  font-size:14px;
+  color:#4b3a2a;
   line-height:1.6;
-  font-size:15px;
+  text-align:justify;
 }
 
-/* Estados */
+/* NUMERO PAGINA */
+.numero{
+  position:absolute;
+  bottom:10px;
+  right:15px;
+  font-size:12px;
+  color:#7a5a40;
+}
+
+/* ESTADO ABIERTA */
 .abierta{
   transform:rotateY(-180deg);
 }
 
-/* Botones invisibles */
+/* ZONAS */
 .zona{
   position:absolute;
   top:0;
   width:50%;
   height:100%;
-  z-index:5;
+  z-index:10;
 }
 
 .izq{ left:0; }
@@ -94,33 +100,27 @@ body{
 </head>
 <body>
 
-<div class="libro" id="libro">
+<div class="libro">
 
   <!-- TAPA -->
   <div class="tapa" id="tapa">
-    Para Abi<br><br>
-    Lo que siento aunque me equivoque
+    El campesino y su sueño de conquistar a la princesa
   </div>
 
   <!-- PAGINA 1 -->
-  <div class="pagina" id="pag1" style="z-index:3;">
-    <h2>Página 1</h2>
-    <p>Aquí comenzará nuestra historia...</p>
+  <div class="pagina" id="pag1" style="z-index:2;">
+    <p>
+Hace mucho mucho tiempo atras existía un noble campesino que era muy bondaso y que siempre ayudaba a las personas sin esperar nada a cambio solo su gratitud, este joven campesino era de alguien de cuerpo grande y con una estatura superior a la de los demás, lastimosamente era algo tímido y bastante sumiso ante las personas, pero había algo en el que pocos sabían que el no quería hacer nada de lo que hacía solo deseaba vivir una vida tranquila y sin complicaciones, hasta que un día conocía a una chica y se enamoro a primera vista, lamentablemente este campesino era muy despistado y no conocía lo que eran eso así que solo penso que le gustaba la compañía de esa mujer, con el tiempo pasaban mas y mas tiempo juntos, cada vez se iban conociendo uno al otro y el iba sintiendo cosas que jamás había sentido, hasta que la noble mujer recomendó mandarse cartas para siempre estar en contacto, y ahi la vio por primera vez no solo era una mujer encantadora con una dulce voz, era mas que eso, era una hermosa princesa de cabellos dorados y ojos esmeralda, y desde ese momento el campesino quedó impresionado con su majestuosidad y belleza, y nunca volvió a ver a una mujer tan hermosa como está princesa, pero el campesino sabía que el no era el más atractivo y que la princesa nunca se fijaría en el, asi sue decidio esconderle a la princesa por mucho tiempo lo que sentía por miedo a que esta se vaya por pensar que solo es alguien interesado, y asi paso un largo tiempo ambos seguían en contacto diariamente y con el tiempo el campesino no podía a ignorar para siempre todo lo que sentía por la princesa, pero tenía que callar porque siempre que escuchaba a la princesa hablar de su caballero ideal solo podía agachar la cabeza y decirle que llegaria ese caballero para ella algun dia, y también porque sabia que vivían en mundos totalmente distintos y la princesa nunca lo elejiria. Pero el campesino nunca se rindió por más noches en vela que pasará, por más dolores en el pecho que sintiera el nunca dejo de sentir eso por la princesa, hasta que un día entre valor y lágrimas decidio invitarle una carta expresándole todos sus sentimientos y aunque el ya sabía la respuesta esa pizca de esperanza nunca se fue de sus ojos, y aunque recibió lo que mas temia no dejó de poner esa sonrisa en su rostro porque siempre se dijo que si no logras algo a la primera solo tienes que seguir intentando hasta conseguirlo, y asi transcurrió el tiempo cada dia con mas frecuencia le escribía a la princesa, aún con el miedo de hacerla enojar o irritarla y que se aleje de el pero nunca dudando en sus palabras que demostraban cuánto la amaba, se dedico a conocerla mas, a saber todos sus gustos o sus miedos, que no le gustaba o que hacía cada cosa que para muchos insignificante para el eran el mejor conocimiento que podría tener, y aunque en muchas ocasiones se peleaba y distanciaba con sus familiares y conocidos por decirle que abandonara la idea el siempre supo lo que quería y pelearia hasta el final para conseguirlo, con cualquier tipo de metodo desde escribirle poemas y dibujarle retratos aunque no muy bonitos expresaban todos sus sentimientos ademas de darle obsequios que la hicieran ver cuánto la amaba. Pero eso no funcionaba, y aunque el solía meter mucho la pata y cagarla siempre, siempre buscaba la manera de arreglarlo ya que perder a esa princesa, a esa persona que tanto ama sería el fin del mundo, el fin se su mundo. Por eso el decide sufrir en silencio, pero esperando, porque aunque sabe que nunca ocurrirá el tiene ese sueño se poder tener la vida de sus sueños junto a esá mujer que tanto ama, de demostrarle en cada mañana tarde y noche el amor que siente por ella, de hacerla feliz en casa acción que hace de ser su caballero y protegerla de todo mal que se le presente de estar para ella en cada situación que se le presente, de estar siempre juntos porque la amo,  y es algo pormlo que está dispuesto a morir por ella con saber que ella seguirá sonriendo y siendo feliz.
+Y si esto no es un cuento de adas donde el campesino logra conquistar a la princesa, o al menos no por el momento, el sigue intentandolo, cada día con cada acción y con cada mensaje.
+
+Por eso mi querida princesa, mi amada Abi, mi mundo Xiomara.
+Cómo muchas veces anterior quiero hacerte la misma pregunta aunque no sea la última vez que lo haga. 
+Me dejarías el gran y hermoso honor de ser tu san Valentin
+    </p>
+    <div class="numero">1</div>
   </div>
 
-  <!-- PAGINA 2 -->
-  <div class="pagina" id="pag2" style="z-index:2;">
-    <h2>Página 2</h2>
-    <p>Aquí irá otro fragmento importante...</p>
-  </div>
-
-  <!-- PAGINA 3 -->
-  <div class="pagina" id="pag3" style="z-index:1;">
-    <h2>Página 3</h2>
-    <p>Y aquí continuará el mensaje...</p>
-  </div>
-
-  <!-- ZONAS TACTILES -->
+  <!-- ZONAS -->
   <div class="zona izq" onclick="anterior()"></div>
   <div class="zona der" onclick="siguiente()"></div>
 
@@ -130,9 +130,7 @@ body{
 let paginaActual = 0;
 const paginas = [
   document.getElementById("tapa"),
-  document.getElementById("pag1"),
-  document.getElementById("pag2"),
-  document.getElementById("pag3")
+  document.getElementById("pag1")
 ];
 
 function siguiente(){
@@ -151,5 +149,4 @@ function anterior(){
 </script>
 
 </body>
-  </html>
-  
+</html>
