--- a/Libro-abi.html
+++ b/Libro-abi.html
@@ -1,171 +1,145 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="es">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>El campesino y su sueño de conquistar a la princesa</title>
+<title>Carta para mi princesa</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&family=EB+Garamond&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Cinzel&family=EB+Garamond&display=swap" rel="stylesheet">
 
 <style>
+
 body{
     margin:0;
-    background: radial-gradient(circle at center, #1a001f, #000);
+    height:100vh;
     display:flex;
     justify-content:center;
     align-items:center;
-    height:100vh;
+    background: radial-gradient(circle at center, #2b0033, #000);
+    overflow:hidden;
     font-family: 'EB Garamond', serif;
 }
 
-.book-container{
-    width:95%;
-    max-width:420px;
-    height:600px;
-    position:relative;
+/* ✉ CARTA FLOTANTE */
+.carta{
+    font-size:80px;
+    cursor:pointer;
+    animation: flotar 3s ease-in-out infinite;
+    transition: transform 0.3s;
 }
 
-.cover{
-    position:absolute;
+.carta:hover{
+    transform: scale(1.1);
+}
+
+@keyframes flotar{
+    0%{ transform: translateY(0px);}
+    50%{ transform: translateY(-20px);}
+    100%{ transform: translateY(0px);}
+}
+
+/* FONDO OSCURO CUANDO SE ABRE */
+.overlay{
+    position:fixed;
     width:100%;
     height:100%;
-    background:#6d0019;
-    color:#f5e6d3;
+    background:rgba(0,0,0,0.8);
     display:flex;
     justify-content:center;
     align-items:center;
+    opacity:0;
+    visibility:hidden;
+    transition:0.5s;
+}
+
+.overlay.active{
+    opacity:1;
+    visibility:visible;
+}
+
+/* 📜 PERGAMINO */
+.pergamino{
+    background:linear-gradient(to bottom,#f5e6c8,#e6d3a3);
+    width:90%;
+    max-width:500px;
+    max-height:80vh;
+    padding:30px;
+    border-radius:10px;
+    box-shadow:0 0 30px rgba(0,0,0,0.8);
+    overflow-y:auto;
+    transform: scaleY(0);
+    transform-origin:top;
+    transition: transform 0.8s ease;
+}
+
+.overlay.active .pergamino{
+    transform: scaleY(1);
+}
+
+/* TEXTO */
+.pergamino h2{
     text-align:center;
     font-family:'Cinzel', serif;
-    font-size:22px;
-    padding:30px;
-    box-sizing:border-box;
-    border-radius:10px;
-    transition:transform 0.8s ease;
-    transform-origin:left;
-    z-index:5;
 }
 
-.cover.open{
-    transform:translateX(-100%);
+.pergamino p{
+    font-size:18px;
+    line-height:1.6;
+    text-align:justify;
 }
 
-.page{
+/* BOTON CERRAR */
+.cerrar{
     position:absolute;
-    width:100%;
-    height:100%;
-    background:linear-gradient(to right,#f8f1e4,#f1e3c6);
-    padding:30px;
-    box-sizing:border-box;
-    border-radius:10px;
-    display:none;
-    flex-direction:column;
-    justify-content:space-between;
-    box-shadow:0 0 15px rgba(0,0,0,0.4);
-}
-
-.page.active{
-    display:flex;
-}
-
-.page-number{
-    text-align:right;
-    font-size:14px;
-    opacity:0.6;
-}
-
-.controls{
-    position:absolute;
-    bottom:-60px;
-    width:100%;
-    display:flex;
-    justify-content:space-between;
-}
-
-button{
-    padding:8px 16px;
-    border:none;
-    background:#6d0019;
+    top:20px;
+    right:30px;
+    font-size:25px;
+    cursor:pointer;
     color:white;
-    border-radius:5px;
 }
+
 </style>
 </head>
-
 <body>
 
-<div class="book-container">
+<div class="carta" onclick="abrirCarta()">✉</div>
 
-<div class="cover" id="cover" onclick="openBook()">
-El campesino y su sueño<br>de conquistar a la princesa
-</div>
-
-<div class="page active">
-<p>Hace mucho mucho tiempo atrás existía un noble campesino que era muy bondadoso y que siempre ayudaba a las personas sin esperar nada a cambio.</p>
-<div class="page-number">1</div>
-</div>
-
-<div class="page">
-<p>Este joven campesino era alguien grande y tímido, que solo soñaba con una vida tranquila.</p>
-<div class="page-number">2</div>
-</div>
-
-<div class="page">
-<p>Hasta que un día conoció a una chica y se enamoró sin saberlo.</p>
-<div class="page-number">3</div>
-</div>
-
-<div class="page">
-<p>Con el tiempo descubrió que ella era una princesa de cabellos dorados y ojos esmeralda.</p>
-<div class="page-number">4</div>
-</div>
-
-<div class="page">
-<p>Sabía que vivían en mundos distintos… pero jamás dejó de sentir lo que sentía.</p>
-<div class="page-number">5</div>
-</div>
-
-<div class="page">
-<p style="font-size:22px; text-align:center;">
+<div class="overlay" id="overlay">
+    <div class="cerrar" onclick="cerrarCarta()">✖</div>
+    <div class="pergamino">
+        <h2>📜</h2>
+        <p>
+Hace mucho mucho tiempo atrás existía un noble campesino que era muy bondadoso y que siempre ayudaba a las personas sin esperar nada a cambio solo su gratitud...
+<br><br>
+Este joven campesino era alguien de cuerpo grande y tímido, que soñaba con una vida tranquila...
+<br><br>
+Hasta que un día conoció a una chica y se enamoró a primera vista...
+<br><br>
+Descubrió que era una hermosa princesa de cabellos dorados y ojos esmeralda...
+<br><br>
+Sabía que vivían en mundos distintos y que tal vez nunca lo elegiría, pero jamás dejó de sentir lo que sentía...
+<br><br>
+Sufrió en silencio, esperó, intentó una y otra vez, escribió cartas, poemas, dibujó retratos...
+<br><br>
+Porque aunque esto no sea un cuento de hadas donde el campesino logra conquistar a la princesa, él sigue intentándolo cada día.
+<br><br>
+Por eso mi querida princesa, mi amada Abi, mi mundo Xiomara…
+<br><br>
 ¿Me dejarías el gran y hermoso honor de ser tu San Valentín?
-</p>
-<div class="page-number">6</div>
-</div>
-
-<div class="controls">
-<button onclick="prevPage()">◀</button>
-<button onclick="nextPage()">▶</button>
-</div>
-
+        </p>
+    </div>
 </div>
 
 <script>
-let currentPage = 0;
-const pages = document.querySelectorAll(".page");
-
-function openBook(){
-    document.getElementById("cover").classList.add("open");
+function abrirCarta(){
+    document.getElementById("overlay").classList.add("active");
 }
 
-function showPage(index){
-    pages.forEach(page => page.classList.remove("active"));
-    pages[index].classList.add("active");
-}
-
-function nextPage(){
-    if(currentPage < pages.length -1){
-        currentPage++;
-        showPage(currentPage);
-    }
-}
-
-function prevPage(){
-    if(currentPage > 0){
-        currentPage--;
-        showPage(currentPage);
-    }
+function cerrarCarta(){
+    document.getElementById("overlay").classList.remove("active");
 }
 </script>
 
 </body>
-    </html>
+        </html>
     
